update github with year format, year, and imports

--- a/generate_github.ipynb
+++ b/generate_github.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "id": "fa133f5e-1e00-4018-8711-ed6ea056299e",
+   "execution_count": null,
+   "id": "0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,8 +17,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "id": "5570a7ec-d2d4-46f9-b585-765bbffc9ffb",
+   "execution_count": null,
+   "id": "1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,8 +46,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
-   "id": "c6aa76b6-ddaf-43d1-abf6-b7b6d800e881",
+   "execution_count": null,
+   "id": "2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,8 +56,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "id": "df44173e-81a1-4eab-a7ab-6552ab7a6098",
+   "execution_count": null,
+   "id": "3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,8 +66,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "id": "2aeea805-bd05-4a8f-ba6a-915904cd6fe6",
+   "execution_count": null,
+   "id": "4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,8 +98,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "id": "5cd14a0e-a2c0-40cb-beca-e6be21b02268",
+   "execution_count": null,
+   "id": "5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,14 +127,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
-   "id": "daa7fb6a-d1c8-4af1-a049-0fe496fc3474",
+   "execution_count": null,
+   "id": "6",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import datetime\n",
+    "import calendar\n",
+    "\n",
     "for index, row in df_merge_submission_schedule.iterrows():\n",
     "    title = row['Title of the workshop']\n",
-    "    my_date = datetime.datetime.strptime(row[\"Date\"], \"%d.%m.%y\")\n",
+    "    my_date = datetime.datetime.strptime(row[\"Date\"], \"%d.%m.%Y\")\n",
     "    weekday = str(my_date.strftime('%d'))\n",
     "    day_of_week = calendar.day_name[my_date.weekday()]  #'Wednesday'\n",
     "    description = row['A short description of your workshop (max 250 words)']\n",
@@ -144,7 +147,7 @@
     "        instructors = row['Instructor 1']\n",
     "    if not pd.isna(row['Title of the workshop']):\n",
     "        slug = slugify(title)\n",
-    "        path = \"/\".join([\"../OBiWoW-2024\", \"-\".join([weekday, day_of_week]), slug])\n",
+    "        path = \"/\".join([\"../OBiWoW-2025\", \"-\".join([weekday, day_of_week]), slug])\n",
     "        if not os.path.exists(path): \n",
     "            os.makedirs(path)\n",
     "        text = \"\\n\".join([\"# %s\" % title, \n",
@@ -165,16 +168,7 @@
    "name": "python3"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.13.0"
+   "name": "python"
   }
  },
  "nbformat": 4,
